﻿=========================
THE HISTORY OF PSYCHOBALL
=========================

*************************************************
(19/08/2013) Version 1.0.0    -  PsyChO Unchained
*************************************************
-RELEASE OF PSYCHO

-New Adventure Mode!
	-FOUR levels!
	-Levels scripted and packed with glorious PsyChOMadness!
	-FOUR AWESOME BOSSES!
	-Over 8 brand-new or modified enemies (9 enemies to be exact)!
-Added Practice mode
	-Use it to master the adventure mode and pass those difficult patterns
	-Unlock more levels by reaching them on adventure mode
-Added Death explosions
	-Different equations that makes your death awesome
-Added original soundtrack!
	-New menu song "Flying Carrots 2"
	-New survival and adventure song "Limitless"
-Added basic controller support!
	-You can, in game, move Psycho and shoot with the analog sticks
	-Any other button triggers Ultrablast
	-However you can't move around the menu or pause...
-Added Concentrate mode
	-Hold shift to move slowly
-Added SplashScreen for Marvellous Soft
-Added new death messages
-Changes on the balance of the game
-Some bug fixes
-Removed previous soundtrack
-Removed menu random messages

*************************************************
(16/06/2013) Version 0.9.1    -  Long way to go
*************************************************

-Changes on Changelog
-Changes on suPerbALLs
	- They are spawned every 30 seconds
	- For every 90 seconds on survivor mode, their on-screen limit increases by 1

*************************************************
(16/06/2013) Version 0.9.0    -  PsyChO Reborn
*************************************************

-Change on the script
	-More "understandable" code!
	-Support for images
-Added a menu
	-Buttons
	-Transition between screens
	-New screen for Controls
	-Regular mode is now Survivor
	-From pause or death screen you can go back to menu
	-New menu song "The Synergy vs N.V.R. - Re-Control"
-Added random menu messages
-Added random pause messages