@@ -23,6 +23,16 @@ function monoguiaball:update( dt )
 		end
 	end
 
+	for _, v in pairs(ultrashot.bodies) do
+		if not v.collides and self:collidesWith(v) then
+			self.collides = true
+			v.collides = true
+			v.explosionEffects = false
+			self.diereason = "ultrashot"
+			break
+		end
+	end
+
 	if psycho.canbehit and not gamelost and self:collidesWith(psycho) then
 		psycho.diereason = "shot"
 		lostgame()
@@ -33,21 +43,23 @@ end
 
 function monoguiaball:handleDelete()
 	neweffects(self, 20)
-	if self.diereason ~= "shot" then return end
-	addscore(100)
-	--local ang = math.atan2(self.Vx, self.Vy)
-	local speed = self.speed:length()
-	for i = 1, self.divideN do
-		local e = (self.divideType or enemies.multiball):new(lux.object.clone(self.args))
-		e.size = self.size - 6
-		e.position:set(self.position):add(math.random(self.size), math.random(self.size))
-		e.speed:set(self.speed):add((math.random() - .5)*v*1.9, (math.random() - .5)*v*1.9):normalize():mult(v + 40 ,v + 40)
-		if math.abs(e.Vy) + math.abs(e.Vx) < 40 then e.Vy = sign(self.Vy) * math.random(3 * v / 4, v) end
-		e:register()
-		--[[e.size = self.size - 10
-		e.position:set(self.position)
-		local angle = ang + (math.random() - .5)*torad(60)
-		e.speed:set(math.sin(angle)*speed*1.3, math.cos(angle)*speed*1.3)
-		e:register()]]
+	if self.diereason ~= "shot" and self.diereason ~= "ultrashot" then return end
+	if self.diereason ~= "ultrashot" then
+		addscore(100)
+		--local ang = math.atan2(self.Vx, self.Vy)
+		local speed = self.speed:length()
+		for i = 1, self.divideN do
+			local e = (self.divideType or enemies.multiball):new(lux.object.clone(self.args))
+			e.size = self.size - 6
+			e.position:set(self.position):add(math.random(self.size), math.random(self.size))
+			e.speed:set(self.speed):add((math.random() - .5)*v*1.9, (math.random() - .5)*v*1.9):normalize():mult(v + 40 ,v + 40)
+			if math.abs(e.Vy) + math.abs(e.Vx) < 40 then e.Vy = sign(self.Vy) * math.random(3 * v / 4, v) end
+			e:register()
+			--[[e.size = self.size - 10
+			e.position:set(self.position)
+			local angle = ang + (math.random() - .5)*torad(60)
+			e.speed:set(math.sin(angle)*speed*1.3, math.cos(angle)*speed*1.3)
+			e:register()]]
+		end
 	end
 end
