@@ -3,6 +3,15 @@ THE HISTORY OF PSYCHOBALL
 =========================
 
 *************************************************
+(xx/xx/2013) Version 1.1.0    -  PsyChO Fixed
+*************************************************
+
+-Fixed lots of bugs
+	-Text bugging
+	-Fixes on cheats
+	 
+
+*************************************************
 (19/08/2013) Version 1.0.0    -  PsyChO Unchained
 *************************************************
 -RELEASE OF PSYCHO
